<resources>
    <string name="app_name">Calculator</string>
    <string name="_1">1</string>
    <string name="calculator">Calculator</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="comma">,</string>
    <string name="ac">AC</string>
    <string name="plus_minus">+/-</string>
    <string name="percent">%</string>
    <string name="div">÷</string>
    <string name="x">x</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="cos">cos</string>
    <string name="sin">sin</string>
    <string name="tan">tan</string>
    <string name="inver">1/x</string>
    <string name="powEuler">e<small><sup>x</sup></small></string>
    <string name="powTen">10<small><sup>x</sup></small></string>
    <string name="twoPow">x<small><sup>2</sup></small></string>
    <string name="threePow">x<small><sup>3</sup></small></string>
    <string name="sinh">sinh</string>
    <string name="cosh">cosh</string>
    <string name="tanh">tanh</string>
    <string name="factorial">x!</string>
    <string name="lg">lg</string>
    <string name="ln">ln</string>
    <string name="c">C</string>
    <string name="numPow">x<small><sup>y</sup></small></string>
    <string name="pi">π</string>
    <string name="rand">Rand</string>
    <string name="rad">Rad</string>
    <string name="euler">e</string>
    <string name="sqrt">√</string>
    <string name="sqrt_root"><small><sup>x</sup></small>√y</string>
    <string name="bracketStart">(</string>
    <string name="bracketEnd">)</string>
    <string name="secondType">2nd</string>
</resources>